modules/App/assets/app.bundle.css
/* ... */
.kiss-flex-wrap-around { align-content: space-around; }
.kiss-flex-first { order: -1;}
.kiss-flex-last { order: 99;}
/* Phone landscape and bigger */
@media (min-width: 640px) {

    .kiss-flex-first\@s { order: -1; }
    .kiss-flex-last\@s { order: 99; }
}
/* Tablet landscape and bigger */
@media (min-width: 960px) {

    .kiss-flex-first\@m { order: -1; }
    .kiss-flex-last\@m { order: 99; }
}
/* Desktop and bigger */
@media (min-width: 1200px) {

    .kiss-flex-first\@l { order: -1; }
    .kiss-flex-last\@l { order: 99; }
}
/* Large screen and bigger */
@media (min-width: 1600px) {

    .kiss-flex-first\@xl { order: -1; }
    .kiss-flex-last\@xl { order: 99; }
}
.kiss-flex-none { flex: none; }
.kiss-flex-auto { flex: auto; }
.kiss-flex-1 { flex: 1; }
.kiss-align-center {
  text-align: center !important;
}
.kiss-align-justified {
  text-align: justify !important;
}
.kiss-align-left {
  text-align: left !important;
}
.kiss-align-right {
  text-align: right !important;
}
/* Phone landscape and bigger */
@media (min-width: 640px) {
  .kiss-align-center\@s { text-align: center !important; }
  .kiss-align-justified\@s { text-align: justify !important; }
  .kiss-align-left\@s { text-align: left !important; }
  .kiss-align-right\@s { text-align: right !important; }
}
/* Tablet landscape and bigger */
@media (min-width: 960px) {
  .kiss-align-center\@m { text-align: center !important; }
  .kiss-align-justified\@m { text-align: justify !important; }
  .kiss-align-left\@m { text-align: left !important; }
  .kiss-align-right\@m { text-align: right !important; }
}
/* Desktop and bigger */
@media (min-width: 1200px) {
  .kiss-align-center\@l { text-align: center !important; }
  .kiss-align-justified\@l { text-align: justify !important; }
  .kiss-align-left\@l { text-align: left !important; }
  .kiss-align-right\@l { text-align: right !important; }
}
/* Large screen and bigger */
@media (min-width: 1600px) {
  .kiss-align-center\@xl { text-align: center !important; }
  .kiss-align-justified\@xl { text-align: justify !important; }
  .kiss-align-left\@xl { text-align: left !important; }
  .kiss-align-right\@xl { text-align: right !important; }
}
.kiss-position-absolute { position: absolute; }
.kiss-position-relative { position: relative; }
.kiss-position-fixed { position: fixed; }
.kiss-position-absolute[center] {
    top: 50%;
    left: 50%;
    transform: translate3d(-50%, -50%, 0);
}
.kiss-position-top-left {
    position: absolute;
    top: 0;
    left: 0;
}
.kiss-position-top-right {
    position: absolute;
    top: 0;
    right: 0;
}
.kiss-position-bottom-left {
    position: absolute;
    bottom: 0;
    left: 0;
}
.kiss-position-bottom-right {
    position: absolute;
    bottom: 0;
    right: 0;
}
h1,
.kiss-size-1 {
  font-size: var(--kiss-font-size-1, 2.5rem);
  line-height: 1.2;
}
h2,
.kiss-size-2 {
  font-size: var(--kiss-font-size-2, 2rem);
  line-height: 1.2;
}
h3,
.kiss-size-3 {
  font-size: var(--kiss-font-size-3, 1.75rem);
  line-height: 1.2;
}
h4,
.kiss-size-4 {
  font-size: var(--kiss-font-size-4, 1.5rem);
  line-height: 1.2;
}
h5,
.kiss-size-5 {
  font-size: var(--kiss-font-size-5, 1rem);
}
h6,
.kiss-size-6 {
  font-size: var(--kiss-font-size-6, 0.875rem);
}
.kiss-size-large {
  font-size: var(--kiss-font-size-large, var(--kiss-font-size-4, 1.5rem));
  line-height: 1.25;
}
.kiss-size-xlarge {
  font-size: var(--kiss-font-size-xlarge, 3.5rem);
  line-height: 1.25;
}
small,
.kiss-size-small {
  font-size: var(--kiss-font-size-small, var(--kiss-font-size-6, 0.875rem));
}
.kiss-size-xsmall {
  font-size: var(--kiss-font-size-small, 11px);
}
/**
 * margins
 */
* + .kiss-margin,
.kiss-margin-top {
    margin-top: var(--kiss-block-element-margin, 1rem) !important;
}
.kiss-margin:not(:last-child),
.kiss-margin-bottom {
    margin-bottom: var(--kiss-block-element-margin, 1rem) !important;
}
.kiss-margin-left {
    margin-left: var(--kiss-block-element-margin, 1rem) !important;
}
.kiss-margin-right {
    margin-right: var(--kiss-block-element-margin, 1rem) !important;
}
* + .kiss-margin-small,
.kiss-margin-small-top {
    margin-top: var(--kiss-block-element-margin-small, .6rem) !important;
}
.kiss-margin-small:not(:last-child),
.kiss-margin-small-bottom {
    margin-bottom: var(--kiss-block-element-margin-small, .6rem) !important;
}
.kiss-margin-small-left {
    margin-left: var(--kiss-block-element-margin-small, .6rem) !important;
}
.kiss-margin-small-right {
    margin-right: var(--kiss-block-element-margin-small, .6rem) !important;
}
* + .kiss-margin-xsmall,
.kiss-margin-xsmall-top {
    margin-top: var(--kiss-block-element-margin-xsmall, 4px) !important;
}
.kiss-margin-xsmall:not(:last-child),
.kiss-margin-xsmall-bottom {
    margin-bottom: var(--kiss-block-element-margin-xsmall, 4px) !important;
}
.kiss-margin-xsmall-left {
    margin-left: var(--kiss-block-element-margin-xsmall, 4px) !important;
}
.kiss-margin-xsmall-right {
    margin-right: var(--kiss-block-element-margin-xsmall, 4px) !important;
}
* + .kiss-margin-large,
.kiss-margin-large-top {
    margin-top: var(--kiss-block-element-margin-large, 3rem) !important;
}
.kiss-margin-large:not(:last-child),
.kiss-margin-large-bottom {
    margin-bottom: var(--kiss-block-element-margin-large, 3rem) !important;
}
.kiss-margin-large-left {
    margin-left: var(--kiss-block-element-margin-large, 3rem) !important;
}
.kiss-margin-large-right {
    margin-right: var(--kiss-block-element-margin-large, 3rem) !important;
}
.kiss-margin-remove { margin: 0 !important; }
.kiss-margin-remove-top { margin-top: 0 !important; }
.kiss-margin-remove-bottom { margin-bottom: 0 !important; }
.kiss-margin-remove-left { margin-left: 0 !important; }
.kiss-margin-remove-right { margin-right: 0 !important; }
.kiss-margin-remove-vertical {
    margin-top: 0 !important;
    margin-bottom: 0 !important;
}
.kiss-margin-remove-horizontal {
    margin-left: 0 !important;
    margin-right: 0 !important;
}
.kiss-margin-remove-adjacent + * { margin-top: 0 !important; }
/* ... */

